# Skull

./: .gitignore  EXAMPLES.md  LEGAL.md  README.md  config.yaml  install.ps1  install.sh  pyproject.toml  requirements.txt  skull_netrecon.py
data/: cve_database.json  default_credentials.json  oui_vendors.json  ports_database.json
modules/: __init__.py  host_discovery.py  os_fingerprint.py  port_scanner.py  report_generator.py  service_detection.py  vuln_scanner.py
reports/: scan_20260324_212125.json  scan_20260324_212202.html  scan_20260324_212343.json
skull_netrecon/: __init__.py  __main__.py  cli.py
skull_netrecon/core/: __init__.py  discovery.py  report.py  scanner.py
skull_netrecon/modules/: __init__.py  os_fingerprint.py  service_detection.py  vuln_scanner.py
skull_netrecon/utils/: __init__.py  logger.py  network.py
tests/: test_network_utils.py
utils/: __init__.py  logger.py  network_utils.py
